Post data to data.json file

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,14 @@
         STAN KONTA: <br> <span class="balance">5000,00</span> zł
       </div>
     </div>
+
+    <ol class="feedbacks row">
+      <!-- <div class="spinner"></div> -->
+    </ol>
+
   </div>
+
+  
 
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
